# DD2360-RayTracing

./: .gitignore  CMakeLists.txt  Makefile  README.md  acceleration_structure.h  camera.h  hitable.h  hitable_list.h  launch.vs.json  main.cu  material.h  precision_types.h  ray.h  raytracing.ipynb  sphere.h  vec3.h
analysis/: evaluations.ipynb  run_experiment.sh
analysis/experiments/BASELINE_488_01/: BASELINE_488_01_1.csv  BASELINE_488_01_1.ncu-rep  BASELINE_488_01_1_gpu_memory.csv  BASELINE_488_01_2.csv  BASELINE_488_01_2.ncu-rep  BASELINE_488_01_3.csv  BASELINE_488_01_3.ncu-rep  BASELINE_488_01_3_gpu_memory.csv  BASELINE_488_01_4.csv  BASELINE_488_01_4.ncu-rep  BASELINE_488_01_4_gpu_memory.csv  BASELINE_488_01_5.csv  BASELINE_488_01_5.ncu-rep  BASELINE_488_01_5_gpu_memory.csv
analysis/experiments/BASELINE_488_02/: BASELINE_488_02_1.csv  BASELINE_488_02_1.ncu-rep  BASELINE_488_02_1_gpu_memory.csv  BASELINE_488_02_2.csv  BASELINE_488_02_2.ncu-rep  BASELINE_488_02_2_gpu_memory.csv  BASELINE_488_02_3.csv  BASELINE_488_02_3.ncu-rep  BASELINE_488_02_3_gpu_memory.csv  BASELINE_488_02_4.csv  BASELINE_488_02_4.ncu-rep  BASELINE_488_02_4_gpu_memory.csv  BASELINE_488_02_5.csv  BASELINE_488_02_5.ncu-rep  BASELINE_488_02_5_gpu_memory.csv
analysis/experiments/RayTracingBaseline/: RayTracingBaseline_1.csv  RayTracingBaseline_1.ncu-rep  RayTracingBaseline_1_gpu_memory.csv  RayTracingBaseline_2.csv  RayTracingBaseline_2.ncu-rep  RayTracingBaseline_2_gpu_memory.csv  RayTracingBaseline_3.csv  RayTracingBaseline_3.ncu-rep  RayTracingBaseline_3_gpu_memory.csv  RayTracingBaseline_4.csv  RayTracingBaseline_4.ncu-rep  RayTracingBaseline_4_gpu_memory.csv  RayTracingBaseline_5.csv  RayTracingBaseline_5.ncu-rep  RayTracingBaseline_5_gpu_memory.csv
analysis/experiments/RayTracingFP16/: RayTracingFP16_1.csv  RayTracingFP16_1.ncu-rep  RayTracingFP16_1_gpu_memory.csv  RayTracingFP16_2.csv  RayTracingFP16_2.ncu-rep  RayTracingFP16_2_gpu_memory.csv  RayTracingFP16_3.csv  RayTracingFP16_3.ncu-rep  RayTracingFP16_4.csv  RayTracingFP16_4.ncu-rep  RayTracingFP16_4_gpu_memory.csv  RayTracingFP16_5.csv  RayTracingFP16_5.ncu-rep  RayTracingFP16_5_gpu_memory.csv
analysis/experiments/RayTracing_MAX_BASELINE_1093_01/: RayTracing_MAX_BASELINE_1093_01_1.csv  RayTracing_MAX_BASELINE_1093_01_1.ncu-rep  RayTracing_MAX_BASELINE_1093_01_1_gpu_memory.csv  RayTracing_MAX_BASELINE_1093_01_2.csv  RayTracing_MAX_BASELINE_1093_01_2.ncu-rep  RayTracing_MAX_BASELINE_1093_01_2_gpu_memory.csv  RayTracing_MAX_BASELINE_1093_01_3.csv  RayTracing_MAX_BASELINE_1093_01_3.ncu-rep  RayTracing_MAX_BASELINE_1093_01_3_gpu_memory.csv  RayTracing_MAX_BASELINE_1093_01_4.csv  RayTracing_MAX_BASELINE_1093_01_4.ncu-rep  RayTracing_MAX_BASELINE_1093_01_4_gpu_memory.csv  RayTracing_MAX_BASELINE_1093_01_5.csv  RayTracing_MAX_BASELINE_1093_01_5.ncu-rep
analysis/experiments/RayTracing_MAX_BASELINE_1093_02/: RayTracing_MAX_BASELINE_1093_02_1.csv  RayTracing_MAX_BASELINE_1093_02_1.ncu-rep  RayTracing_MAX_BASELINE_1093_02_1_gpu_memory.csv  RayTracing_MAX_BASELINE_1093_02_2.csv  RayTracing_MAX_BASELINE_1093_02_2.ncu-rep  RayTracing_MAX_BASELINE_1093_02_2_gpu_memory.csv  RayTracing_MAX_BASELINE_1093_02_3.csv  RayTracing_MAX_BASELINE_1093_02_3.ncu-rep  RayTracing_MAX_BASELINE_1093_02_3_gpu_memory.csv  RayTracing_MAX_BASELINE_1093_02_4.csv  RayTracing_MAX_BASELINE_1093_02_4.ncu-rep  RayTracing_MAX_BASELINE_1093_02_4_gpu_memory.csv  RayTracing_MAX_BASELINE_1093_02_5.csv  RayTracing_MAX_BASELINE_1093_02_5.ncu-rep  RayTracing_MAX_BASELINE_1093_02_5_gpu_memory.csv
analysis/experiments/RayTracing_MAX_BASELINE_1940_01/: RayTracing_MAX_BASELINE_1940_01_1.csv  RayTracing_MAX_BASELINE_1940_01_1.ncu-rep  RayTracing_MAX_BASELINE_1940_01_1_gpu_memory.csv  RayTracing_MAX_BASELINE_1940_01_2.csv  RayTracing_MAX_BASELINE_1940_01_2.ncu-rep  RayTracing_MAX_BASELINE_1940_01_3.csv  (+9 more)
(+909 files in other folders)
